--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
-    <string name="app_name">MediaPlayerApp</string>
+    <string name="app_name">Pixel Music Player</string>
+    <string name="title_activity_tab">TabActivity</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
+    <string name="tab_text_3">Tab 3</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+
+    <!-- Tab Titles -->
+    <string name="tracks">Tracks</string>
+    <string name="artist">Artist</string>
+    <string name="album">Album</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="tracks_fragment">Tracks Fragment</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
